--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@
     grid-template-columns: repeat(2, 1fr);
 
 }
-.card .checkOut div{
-    background-color: gray;
+.card .checkOut{
+    text-align: center;
+    background-color: white;
     width: 100%;
-    color: white;
+    border: 1px solid black;
+    color: black;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -34,15 +36,20 @@
     font-weight: bold;
     cursor: pointer;
 }
-.card .checkOut div:nth-child(2){
-    background-color: #1C1F25;
-    color: #fff;
+
+.total {
+    width: 100%;
 }
+
 .listCard li{
     display: grid;
     grid-template-columns: 100px repeat(3, 1fr);
     color: #fff;
     row-gap: 10px;
+    background-color: goldenrod;
+    font-weight: 700;
+    padding: 10px;
+    margin-top: 8px;
 }
 .listCard li div{
     display: flex;
